// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for bugs 1`] = `
<Fragment>
  <span
    className="flex-1 big-spacer-right text-right"
  >
    metric_domain.Reliability
  </span>
  <Tooltip
    overlay={
      <withAppStateContext(RatingTooltipContent)
        metricKey="reliability_rating"
        value="1.0"
      />
    }
  >
    <span>
      <DrilldownLink
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        className="link-no-underline link-rating"
        component="my-project"
        metric="reliability_rating"
      >
        <Rating
          value="1.0"
        />
      </DrilldownLink>
    </span>
  </Tooltip>
</Fragment>
`;

exports[`should render correctly for bugs 2`] = `
<Fragment>
  <span
    className="flex-1 big-spacer-right text-right"
  >
    metric_domain.Reliability
  </span>
  <Tooltip
    overlay={
      <withAppStateContext(RatingTooltipContent)
        metricKey="new_reliability_rating"
        value="1.0"
      />
    }
  >
    <span>
      <DrilldownLink
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        className="link-no-underline link-rating"
        component="my-project"
        metric="new_reliability_rating"
      >
        <Rating
          value="1.0"
        />
      </DrilldownLink>
    </span>
  </Tooltip>
</Fragment>
`;

exports[`should render correctly for code smells 1`] = `
<Fragment>
  <span
    className="flex-1 big-spacer-right text-right"
  >
    metric_domain.Maintainability
  </span>
  <Tooltip
    overlay={
      <withAppStateContext(RatingTooltipContent)
        metricKey="sqale_rating"
        value="1.0"
      />
    }
  >
    <span>
      <DrilldownLink
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        className="link-no-underline link-rating"
        component="my-project"
        metric="sqale_rating"
      >
        <Rating
          value="1.0"
        />
      </DrilldownLink>
    </span>
  </Tooltip>
</Fragment>
`;

exports[`should render correctly for code smells 2`] = `
<Fragment>
  <span
    className="flex-1 big-spacer-right text-right"
  >
    metric_domain.Maintainability
  </span>
  <Tooltip
    overlay={
      <withAppStateContext(RatingTooltipContent)
        metricKey="new_maintainability_rating"
        value="1.0"
      />
    }
  >
    <span>
      <DrilldownLink
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        className="link-no-underline link-rating"
        component="my-project"
        metric="new_maintainability_rating"
      >
        <Rating
          value="1.0"
        />
      </DrilldownLink>
    </span>
  </Tooltip>
</Fragment>
`;

exports[`should render correctly for vulnerabilities 1`] = `
<Fragment>
  <span
    className="flex-1 big-spacer-right text-right"
  >
    metric_domain.Security
  </span>
  <Tooltip
    overlay={
      <withAppStateContext(RatingTooltipContent)
        metricKey="security_rating"
        value="1.0"
      />
    }
  >
    <span>
      <DrilldownLink
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        className="link-no-underline link-rating"
        component="my-project"
        metric="security_rating"
      >
        <Rating
          value="1.0"
        />
      </DrilldownLink>
    </span>
  </Tooltip>
</Fragment>
`;

exports[`should render correctly for vulnerabilities 2`] = `
<Fragment>
  <span
    className="flex-1 big-spacer-right text-right"
  >
    metric_domain.Security
  </span>
  <Tooltip
    overlay={
      <withAppStateContext(RatingTooltipContent)
        metricKey="new_security_rating"
        value="1.0"
      />
    }
  >
    <span>
      <DrilldownLink
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        className="link-no-underline link-rating"
        component="my-project"
        metric="new_security_rating"
      >
        <Rating
          value="1.0"
        />
      </DrilldownLink>
    </span>
  </Tooltip>
</Fragment>
`;

exports[`should render correctly if no values are present 1`] = `
<Fragment>
  <span
    className="flex-1 big-spacer-right text-right"
  >
    metric_domain.Reliability
  </span>
  <div
    className="padded"
  >
    <Rating />
  </div>
</Fragment>
`;
